--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,37 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <axis2.version>1.7.9</axis2.version>
   </properties>
 
   <dependencies>
+	<dependency>
+		<groupId>org.apache.axis2</groupId>
+		<artifactId>axis2-adb</artifactId>
+		<version>${axis2.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.axis2</groupId>
+		<artifactId>axis2-transport-http</artifactId>
+		<version>${axis2.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.axis2</groupId>
+		<artifactId>axis2-transport-local</artifactId>
+		<version>${axis2.version}</version>
+	</dependency>
+    <dependency> 
+      <groupId>org.apache.poi</groupId> 
+      <artifactId>poi</artifactId> 
+      <version>3.12</version> 
+    </dependency> 
+    <dependency> 
+      <groupId>org.apache.poi</groupId> 
+      <artifactId>poi-ooxml</artifactId> 
+      <version>3.12</version> 
+    </dependency>   
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
