--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <axis2.version>1.7.9</axis2.version>
+    <poi-version>3.17</poi-version>
   </properties>
 
   <dependencies>
@@ -39,12 +40,12 @@
     <dependency> 
       <groupId>org.apache.poi</groupId> 
       <artifactId>poi</artifactId> 
-      <version>3.12</version> 
+      <version>${poi-version}</version>
     </dependency> 
     <dependency> 
       <groupId>org.apache.poi</groupId> 
       <artifactId>poi-ooxml</artifactId> 
-      <version>3.12</version> 
+      <version>${poi-version}</version> 
     </dependency>   
     <dependency>
       <groupId>junit</groupId>
